Compilation works with hardcoded JDK path.